addded rating option

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -40,6 +40,10 @@
           "sap.m": {}
         }
       },
+      "contentDensities": {
+        "compact": true,
+        "cozy": true
+      },
       "models": {
         "i18n": {
           "type": "sap.ui.model.resource.ResourceModel",
@@ -60,6 +64,39 @@
             "uri": "css/style.css"
           }
         ]
+      },
+      "routing": {
+        "config": {
+          "routerClass": "sap.m.routing.Router",
+          "type": "View",
+          "viewType": "XML",
+          "path": "sap.ui.demo.walkthrough.view",
+          "controlId": "app",
+          "controlAggregation": "pages"
+        },
+        "routes": [
+          {
+            "pattern": "",
+            "name": "overview",
+            "target": "overview"
+          },
+          {
+            "pattern": "detail/{invoicePath}",
+            "name": "detail",
+            "target": "detail"
+          }
+        ],
+        "targets": {
+          "overview": {
+            "id": "overview",
+            "name": "Overview"
+          },
+          "detail": {
+            "id": "detail",
+            "name": "Detail"
+          }
+        }
       }
     }
   }
+  
